[package]
name = "CasuaInessBLOG"
version = "1.0.9"
description = "「随心の博客」是聚焦编程开发与前沿技术的个人博客，分享实战经验、开源工具与原创教程。以通俗语言解析技术难点，用代码实践探索数字世界，欢迎各位大佬交流学习，共同成长。"
authors = ["1024xiaoshen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pakeplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0"
tauri-plugin-single-instance = "2"