[package]
name = "MetoWhale"
version = "1.0.1"
description = "小众旅行沉浸式社区，以深海蓝为主视觉，用户通过地图标记生成“鲸声轨迹”，解锁秘境路线。攻略库按“鲸群迁徙路线”智能推荐，每篇游记点亮一片海域。迷途亦是归途，所有探索终成回声。"
authors = ["1024xiaoshen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pakeplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0"
tauri-plugin-single-instance = "2"